k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-ingress
  namespace: game-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/cors-allow-methods: GET, POST, OPTIONS
    alb.ingress.kubernetes.io/cors-allow-origin: '*'
    alb.ingress.kubernetes.io/cors-allow-headers: '*'
    alb.ingress.kubernetes.io/cors-expose-headers: '*'
spec:
  rules:
  - http:
      paths:
      - path: /games/pacman/
        pathType: Prefix
        backend:
          service:
            name: pacman-game
            port:
              number: 80
      - path: /games/suika/
        pathType: Prefix
        backend:
          service:
            name: suika-game
            port:
              number: 80
      - path: /games/sputnika/
        pathType: Prefix
        backend:
          service:
            name: sputnika-game
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: game-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-website
            port:
              number: 80
